# expenses-ingestion

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  start.ps1
.github/workflows/: ping_database.yml
backend/analytics/: gold_queries.py
backend/core/: database_handler.py  file_handler.py  google_drive_handler.py  kdrive_handler.py  types.py
backend/core/dashboard/: gold_queries.py
backend/db/: env.py  initial_setup.sql  migrate.py  permissions.sql
backend/db/versions/: 023866e825ab_add_account_type_column.py  06c81ad68717_test02.py  07cc3fe2b325_add_all_gold_layer_tables.py  2034c9597329_initial_schema.py  576341b0b963_add_new_model_for_failed_expenses.py  5b6c01cd5a71_add_expected_schema_column_to_file_.py  5d7b2cdbb0a7_remove_some_cols.py  736296d8c235_auto_increment.py  75ee24bcd3de_update_col_settings.py  7969ab1c8749_add_gold_layer_tables.py  7f517f251fcf_auto_increment.py  915241ea7941_initial_setup.py  9737521d77e6_add_all_gold_layer_tables.py  a077cb3b5855_add_account_col_to_expenses.py  b3497b68bab9_add_gold_layer_tables.py  b5fc1541dc6d_add_expected_schema_column_to_file_.py  be9575bdbe6f_update_col_settings.py  (+6 more)
backend/ingestion/: gold_layer.py  gold_pipeline.py  pipeline.py  silver_layer.py  silver_pipeline.py
backend/models/: expenses_file.py  models.py
backend/tasks/: silver_layer_tasks.py
backend/validation/: base_validator.py  file_validators.py
db/: env.py
db/versions/: 2025_04_08_2156_initial_schema.py
docs/: USAGE.md
frontend/: app.py
frontend/pages/: 01__Expenses_Dashboard.py  02__Budget.py
(+9 files in other folders)
