[project]
name = "expenses-ingestion"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.43.1",
    "google-api-python-client==2.165.0",
    "google-auth-oauthlib==1.2.1",
    "load-dotenv==0.1.0",
    "supabase==2.14.0",
    "sqlmodel==0.0.24",
    "celery[redis]==5.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
